# dnd-lore-lords-of-sindrel

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  pyproject.toml
.cursor/rules/: lore-assistant.mdc  npc-generation.mdc
lore/characters/: alandria.textile  amanira.textile  ambassador-thrawne-lithra.textile  arise-to-victory-over-the-infidel-hoards.textile  arouraios.textile  ayr.textile  barnabus.textile  bramble-ravenglade.textile  callem-marr.textile  caller-georg.textile  carlos-winterborn.textile  cedric.textile  celebrant-alruna.textile  chuggaz.textile  commander-locke.textile  commander-wake.textile  corporal-brokkr-stegg.textile  craftsman-shegrim.textile  dogara.textile  dulcinia-von-phthasia.textile  embren-oestra.textile  emerich-surefoot.textile  emissary-halan.textile  emissary-isius.textile  f-lar-mnementh.textile  farseer-sybera-goela.textile  first-of-mabon.textile  garric-brunt.textile  general-alicia-meness.textile  georges-de-selve.textile  gillette-quill.textile  hielaman.textile  high-summoner-nial-beltus.textile  hunts-by-night.textile  hytham-grimbolg.textile  jean-de-dinteville.textile  (+41 more)
metadata/: lore-dashboard.json  sync-state.json
notes/: Novel Structure Notes.md  README.md  character-descriptions-todo.md  character-template.textile  gm-secrets.md  items-migration.md  lore-dashboard.html  lore-dashboard.md  quick-npc.md  session-12-plan.md  timeline.md  todo.md
scripts/: check_op_custom_css.py  check_textile.py  check_wiki_links.py  generate_items_index.py  generate_lore_dashboard.py
(+214 files in other folders)
